--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgresql://postgres:admin@5432/trakzone
+DATABASE_URL=postgresql://postgres:admin@localhost/trakzone
+JWT_SECRET_KEY=super_secret_key_change_this
 
